<resources>
    <string name="app_name">Edoo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_sendAll">Gửi thông báo</string>
    <string name="action_post">Đăng</string>


    <string name="hint_email">Email</string>
    <string name="hint_password">Mật khẩu</string>
    <string name="hint_name">Họ và tên</string>
    <string name="btn_login">ĐĂNG NHẬP</string>
    <string name="btn_register">ĐĂNG KÍ</string>
    <string name="btn_link_to_register">Chưa có tài khoản? <u><b>Đăng kí ngay</b></u>.</string>
    <string name="btn_link_to_login">Đã có tài khoản? <u><b>Đăng nhập ngay</b></u>.</string>
    <string name="btn_link_to_forgot_pass">Quên mật khẩu?</string>
    <string name="welcome">Chào mừng</string>
    <string name="btn_logout">Đăng xuất</string>
    <string name="name">Họ và tên</string>
    <string name="hint_repassword">Nhập lại mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="register">Đăng kí</string>
    <string name="txt_subject_class">Lớp môn học</string>
    <string name="lopkhoahoc">Lớp khoá học</string>
    <string name="covanlop">Cố vấn lớp</string>
    <string name="register_lopkhoahoc">Lớp khoá học(vd: K58CLC, ...)</string>
    <string name="txt_utilities">Tiện ích</string>
    <string name="txt_account">Tài khoản</string>
    <string name="txt_share">Chia sẻ</string>
    <string name="setting">Cài đặt</string>
    <string name="introduction">Giới thiệu</string>
    <string name="txt_logout">Đăng xuất</string>
    <string name="nhom">Nhóm</string>
    <string name="txt_time_table">Thời khoá biểu</string>
    <string name="done">Hoàn tất</string>
    <string name="editActivity">Chỉnh sửa thông tin cá nhân</string>
    <string name="hint_mssv">Mã số sinh viên</string>
    <string name="hint_msgv">Mã số giảng viên</string>
    <string name="txt_update_account">Cập nhật tài khoản</string>


    <string name="thoi_khoa_bieu">Thời khóa biểu</string>
    <string name="title_activity_write_post">WritePostActivity</string>
    <string name="title_activity_post_writer">Đăng bài</string>
    <string name="author_name">Trần Đức Hùng</string>
    <string name="title_post">Hỏi thông tin bài tập</string>
    <string name="content_post">Mình muốn hỏi bài tập JAVA hôm nay phải làm những gì thế ạ? Mình cám ơn nhiều :)</string>
    <string name="comment_author">Bạn phải làm bài 20 21 22 ở trong sách giáo khoa cô có cho mà</string>
    <string name="question_post">Hãy đặt câu hỏi ...</string>
    <string name="title_post_hint">Tiêu đề</string>
    <string name="content_hint">Nội dung</string>
    <string name="title_post2">Tiêu đề</string>
    <string name="type_post">Loại post</string>
    <string name="type_post_question">Question</string>
    <string name="type_post_note">Note</string>
    <string name="type_post_poll">Poll</string>
    <string name="type_post_notification">Notification</string>
    <string name="type_post_exercise">Exercise</string>
    <string name="title_content2">Nội dung</string>
    <string name="lichthi">Lịch Thi</string>
    <string name="tailieu">Tài Liệu</string>
    <string name="diemtongket">Điểm tổng kết</string>
    <string name="postDetailActivity">Chi tiết bài đăng</string>
    <string name="locbaidang">Lọc bài đăng giáo viên</string>
    <string name="locbaidangchuatraloi">Lọc bài đăng chưa được giải quyết</string>
    <string name="post">Đăng bài</string>
    <string name="tatcabaidang">Tất cả bài đăng</string>
    <string name="feed">Bảng tin</string>
    <string name="time_post">18/10/15</string>
    <string name="txt_class">Lớp học</string>
    <string name="timeline_activity">Bài đăng</string>
    <string name="locbaidangchuadoc">Lọc bài chưa đọc</string>
    <string name="description">Một số thông tin</string>

    <string name="link">Link</string>
    <string name="link_title">Title</string>
    <string name="dialog_title_insert_link">Thêm link</string>
    <string name="insert">Thêm</string>
    <string name="warn">Chú ý</string>
    <string name="go_back">Quay lại</string>
    <string name="warn_exit_and_delete">Thoát và xóa bài viết?</string>
    <string name="warn_exit_edit">Thoát chỉnh sửa?</string>
    <string name="post_incognito">Đăng ở chế độ ẩn danh</string>
    <string name="anonymous">Anonymous</string>


    <string name="txt_gallery">Gallery</string>
    <string name="txt_camera">Camera</string>
    <string name="txt_solved">Solved</string>
    <string name="txt_not_solved">Not solved</string>
    <string name="title_activity_profile">Profile</string>
    <string name="lert_press_back">Nhấn lần nữa để thoát</string>
    <string name="txt_delete_post">Xóa bài viết</string>
    <string name="txt_edit_post">Sửa bài viết</string>
    <string name="txt_edit_profile">Sửa profile</string>
    <string name="txt_edit_avatar">Đổi ảnh đại diện</string>
    <string name="txt_get_image_from">Lấy ảnh từ:</string>
    <string name="txt_change_password">Đổi mật khẩu</string>
    <string name="txt_old_password">Mật khẩu cũ</string>
    <string name="txt_old_password_incorrect">Mật khẩu cũ không đúng!</string>
    <string name="txt_new_password">Mật khẩu mới</string>
    <string name="txt_confirm_new_password">Nhập lại mật khẩu mới</string>
    <string name="txt_new_password_not_match">Mật khẩu mới không khớp với nhau!</string>
    <string name="txt_reset_password">Đặt lại mật khẩu</string>
    <string name="txt_forgot_password"><i>Quên mật khẩu?</i></string>
    <string name="txt_number_exercise">Đã nộp:</string>
    <string name="txt_submit">Nộp bài</string>
    <string name="txt_check_submit">Kiểm tra</string>
    <string name="txt_remaining_time">Còn:</string>
    <string name="txt_preview">Xem trước</string>
    <string name="txt_options">Tùy chọn</string>
    <string name="txt_type_post">Loại bài viết:</string>
    <string name="txt_deadline">Hạn nộp:</string>
    <string name="txt_list_submitted">Danh sách nộp bài</string>


    <string name="txt_save">Lưu</string>
    <string name="txt_no">Không</string>
    <string name="txt_cancel">Thoát</string>
    <string name="txt_birthday">Ngày sinh</string>
    <string name="txt_email">Email</string>
    <string name="txt_description">Giới thiệu</string>
    <string name="txt_favorite">Sở thích</string>
    <string name="txt_password">Mật khẩu</string>
    <string name="txt_question_delete_post">Thao tác xóa không thể hoàn tác. Bạn có muốn tiếp tục?</string>
    <string name="txt_yes">Đồng ý</string>
    <string name="txt_delete_comment">Xóa comment</string>
    <string name="txt_send">Gửi</string>

    <!--IntroSliderActivity-->
    <string name="next">Tiếp theo</string>
    <string name="txt_skip">Đóng</string>
    <string name="txt_start">Bắt đầu</string>

    <string name="txt_intro_slide_1_title">@string/app_name</string>
    <string name="txt_intro_slide_1_content">Một ứng dụng dành cho các trường đại học, cao đẳng đào tạo theo mô hình tín chỉ.</string>
    <string name="txt_intro_slide_2_title">Thời khóa biểu</string>
    <string name="txt_intro_slide_2_content">Hiển thị và cập nhật thời khóa biểu theo lịch học đã đăng kí theo từng học kỳ một cách rõ ràng!</string>
    <string name="txt_intro_slide_3_title">Kênh trao đổi tập trung</string>
    <string name="txt_intro_slide_3_content">Mỗi lớp môn học đều có một kênh trao đổi riêng, học tập theo giáo trình học trên lớp!</string>
    <string name="txt_intro_slide_4_title">Hỏi đáp nhanh chóng</string>
    <string name="txt_intro_slide_4_content">Bạn và mọi người có thể đăng bài và trả lời bài đăng, giúp đỡ nhau trong học tập!</string>
    <string name="txt_intro_slide_5_title">Thông tin liên tục</string>
    <string name="txt_intro_slide_5_content">Cập nhật thông báo ngay lập tức, bạn sẽ không bị bỏ lỡ một thông tin nào!</string>
    <string name="txt_intro_slide_6_title">Điểm đánh giá</string>
    <string name="txt_intro_slide_6_content">Hoạt động của bạn được ghi nhận, tính điểm và đánh giá công bằng nhất!</string>
    <string name="icognito">Ẩn danh</string>


    <string-array name="arr_opts_statistic_submitted">
        <item>Tất cả</item>
        <item>Đã nộp bài</item>
        <item>Nộp muộn</item>
        <item>Chưa nộp bài</item>
    </string-array>

    <string name="txt_filter_all">Tất cả</string>
    <string name="txt_filter_on_time">Đã nộp bài</string>
    <string name="txt_filter_late">Nộp muộn</string>
    <string name="txt_filter_none">Chưa nộp bài</string>
</resources>
