<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/item_post"
        android:showAsAction="always"
        android:icon="@mipmap/ic_write_post_48_2"
        android:title="@string/post"
        tools:ignore="AppCompatResource" />

    <item
        android:id="@+id/item_locbaidanggiaovien"
        android:showAsAction="collapseActionView"
        android:icon="@mipmap/ic_nhom"
        android:title="@string/locbaidang"
        tools:ignore="AppCompatResource" />

    <item
        android:id="@+id/item_locbaidangchuadoc"
        android:showAsAction="collapseActionView"
        android:icon="@mipmap/ic_nhom"
        android:title="@string/locbaidangchuadoc"
        tools:ignore="AppCompatResource" />

    <item
        android:id="@+id/item_locbaidangchuatraloi"
        android:showAsAction="collapseActionView"
        android:icon="@mipmap/ic_nhom"
        android:title="@string/locbaidangchuatraloi"
        tools:ignore="AppCompatResource" />

    <item
        android:id="@+id/item_tatcabaidang"
        android:showAsAction="collapseActionView"
        android:title="@string/tatcabaidang"
        tools:ignore="AppCompatResource" />
</menu>