<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/action_filter_on_time"
        android:showAsAction="never"
        android:title="@string/txt_filter_on_time"
        tools:ignore="AppCompatResource" />

    <item
        android:id="@+id/action_filter_late"
        android:showAsAction="never"
        android:title="@string/txt_filter_late"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/action_filter_none"
        android:showAsAction="never"
        android:title="@string/txt_filter_none"
        tools:ignore="AppCompatResource" />

    <item
        android:id="@+id/action_filter_all"
        android:showAsAction="never"
        android:title="@string/txt_filter_all"
        tools:ignore="AppCompatResource" />


</menu>